# Scriptoris

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PROBLEMS.md  README.md  RELEASE_PROCESS.md  codebuff.json  deny.toml  knowledge.md  rust-toolchain.toml
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  ci.yml.disabled  release.yml  test-simple.yml
assets/demo/: DEMO_GUIDE.md
assets/demo/sample-files/: demo.md
crates/lsp-plugin/: Cargo.toml
crates/lsp-plugin/src/: capabilities.rs  client.rs  document.rs  lib.rs  plugin.rs  server.rs
crates/mdcore/: Cargo.toml
crates/mdcore/src/: lib.rs  markdown.rs  sanitize.rs  tests.rs
crates/scriptoris/: Cargo.toml  README.md
crates/scriptoris/src/: app.rs  command_processor.rs  config.rs  editor.rs  enhanced_ui.rs  file_manager.rs  highlight.rs  lib.rs  main.rs  session_manager.rs  status_manager.rs  text_width.rs  ui.rs  ui_state.rs
