[workspace]
members = ["crates/mdcore", "crates/scriptoris", "crates/lsp-plugin"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Scriptoris Team"]
license = "MIT"

[workspace.dependencies]
# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }

# Markdown
comrak = "0.29"
ammonia = "4.0"

# File handling
directories = "5.0"

# Utils
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
