[workspace]
members = ["crates/mdcore", "crates/scriptoris", "crates/lsp-plugin"]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"
authors = ["Scriptoris Team"]
license = "MIT"
description = "A powerful, Vim-inspired terminal-based Markdown editor built with Rust"
repository = "https://github.com/SilentMalachite/Scriptoris"
homepage = "https://github.com/SilentMalachite/Scriptoris"
keywords = ["markdown", "editor", "vim", "terminal", "tui"]
categories = ["text-editors", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
# Core
anyhow = "=1.0.99"
serde = { version = "=1.0.225", features = ["derive"] }
serde_json = "=1.0.145"
tokio = { version = "=1.47.1", features = ["full"] }

# Markdown
comrak = "=0.29.0"
ammonia = "=4.1.1"

# File handling
directories = "=5.0.1"

# Utils
chrono = "=0.4.42"
log = "=0.4.28"
env_logger = "=0.11.8"
base64 = "=0.22.1"
