[package]
name = "lsp-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language Server Protocol integration plugin for Scriptoris editor"
repository.workspace = true
homepage.workspace = true
keywords = ["lsp", "language-server", "editor", "plugin"]
categories = ["development-tools", "text-editors"]

[dependencies]
# Core dependencies
anyhow.workspace = true
directories = { workspace = true }

# LSP
lsp-types = "=0.94.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Utilities
log.workspace = true
url = "=2.5.7"
unicode-segmentation = "1.10"
