[package]
name = "mdcore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Markdown processing library for Scriptoris with GFM support and HTML sanitization"
repository.workspace = true
homepage.workspace = true
keywords = ["markdown", "gfm", "html", "sanitization"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
comrak.workspace = true
ammonia.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

regex = "1.11"
lazy_static = "1.5"

[dev-dependencies]
insta = "1.41"