[package]
name = "scriptoris"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "scriptoris"
path = "src/lib.rs"

[[bin]]
name = "scriptoris"
path = "src/main.rs"

[dependencies]
# TUI Framework
crossterm = "0.27"
ratatui = "0.26"

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# Text editing
ropey = "1.6"  # Efficient rope data structure for text
unicode-width = "0.1"
unicode-segmentation = "1.10"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
dirs = "5.0"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Markdown and syntax highlighting
mdcore = { path = "../mdcore" }
syntect = "5.0"

# LSP client (optional)
lsp-types = { version = "0.94", optional = true }

[features]
default = []
lsp = ["lsp-types"]

[dev-dependencies]
tempfile = "3.20.0"
