[package]
name = "scriptoris"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
name = "scriptoris"
path = "src/lib.rs"

[[bin]]
name = "scriptoris"
path = "src/main.rs"

[dependencies]
# TUI Framework
crossterm = "=0.27.0"
ratatui = "=0.26.3"

# Async runtime (unified at workspace level)
tokio = { workspace = true, features = ["full"] }

# Text editing
ropey = "=1.6.1"  # Efficient rope data structure for text
unicode-width = "=0.1.14"
unicode-segmentation = "=1.12.0"

# Configuration
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }

# Utilities
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
chrono = { workspace = true, features = ["serde"] }

# Markdown and syntax highlighting
mdcore = { path = "../mdcore" }
syntect = "=5.2.0"

# LSP client (optional)
lsp-types = { version = "=0.94.1", optional = true }

[features]
default = []
lsp = ["lsp-types"]

[dev-dependencies]
tempfile = "=3.22.0"
